-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0
-
None
-
50ccd35fbdc1bd890f577616ee306573999cddb5 (qt/qtbase/dev) 075d971fea75f48122207dc01fce35cfdbb40daf (qt/qtbase/5.15)
QSslCertificate::PatternSyntax is missing documentation.
| For Gerrit Dashboard: QTBUG-84464 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 302155,4 | Doc: add missing PatternSyntax documentation to QSslCertificate | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 303374,2 | Doc: add missing PatternSyntax documentation to QSslCertificate | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |