Doc: add missing PatternSyntax documentation to QSslCertificate

This patch adds the missing documentation for the new QSslCertificate
PatternSyntax enum which replaces the one from QRegExp.

Fixes: QTBUG-84464
Pick-to: 5.15
Change-Id: Icf092f42ad4dff9207ca51dfd8b4fb8ed6443ff2
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>